<resources>
    <string name="app_name">AppBeWellFragments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="concept">Concept</string>
    <string name="motivation">Motivation</string>
    <string name="contact">Contact</string>
    <string name="infos_pratiques">Infos pratiques</string>
    <string name="cours_collectifs">Cours collectifs</string>
    <string name="calcul">Calcul</string>
    <string name="mon_espace">Mon espace</string>
</resources>
